--- a/css/main.css
+++ b/css/main.css
@@ -18,43 +18,62 @@ body{
     padding: 50px;
     background: hsl(30, 38%, 92%);
     font-family: 'Montserrat', sans-serif;
+    margin: 0;
+    padding: 10px;
 }
+
 
 main{
-    display: flex;
-    padding: 0;
-}
-
-figure{
-    margin: 0;
-    padding: 0;
-}
-
-img{
-    width:50%;
-    border-top-left-radius: 15px;
-    border-bottom-left-radius: 15px;
-}
-
-section{
-    display: flex;
+    width: 100%;
     background: hsl(0, 0%, 100%);
-    border-radius: 15px;
-    width: 600px;
+    border-radius: 10px;
+    /* margin: 10px; */
 }
 
-.content{
-    margin: 20px;
+.image{
+    content: url(../images/image-product-mobile.jpg);
+    width: 100%;
+    border-top-right-radius: 10px;
+    border-top-left-radius: 10px;
 }
+.content{
+    width: 90%;
+    margin: 0 20px 20px 15px;
+    padding-right: 10px;
+}
+
+button:hover{
+    cursor: pointer;
+    background: hsl(158, 82%, 13%);
+}
+
+button img{
+    width: 15px;
+    padding: 0px 10px; 
+}
+
 
 
 h2{
     font-weight: 500;
     text-transform: uppercase;
+    color: hsl(228, 12%, 48%);
+    font-size: 16px;
+    padding-bottom: 2px;
+    margin-bottom: 2px;
 }
 
 h1{
     font-family: 'Fraunces', serif;
+    color: hsl(212, 21%, 14%);
+    margin-top: 10px;
+}
+
+p{
+    color: hsl(228, 12%, 48%);
+    padding-bottom: 10px;
+    word-spacing: 5px;
+    font-size: 14px;
 }
 
 .big{
@@ -62,9 +81,69 @@ h1{
     font-family: 'Fraunces', serif;
     font-size: 30px;
     color: hsl(158, 36%, 37%);
+    margin-right: 25px;
 }
 
 .small{
     text-decoration: line-through;
     color: hsl(228, 12%, 48%);
+}
+
+button{
+    width: 100%;
+    display: flex;
+    padding: 15px;
+    justify-content: center;
+    color: hsl(0, 0%, 100%);
+    background: hsl(158, 36%, 37%);
+    border: none;
+    border-radius: 10px;
+    font-size: 16px;
+    font-family: 'Montserrat', sans-serif;
+}
+
+
+
+@media screen and (min-width: 600px) {
+    main{
+        display: flex;
+        padding: 0;
+    }
+    
+    figure{
+        margin: 0;
+        padding: 0;
+    }
+    
+    img{
+        width:50%;
+        border-top-left-radius: 15px;
+        border-bottom-left-radius: 15px;
+    }
+    
+    section{
+        display: flex;
+        background: hsl(0, 0%, 100%);
+        border-radius: 15px;
+        width: 600px;
+    }   
+    
+    .content{
+        margin: 0px 10px;
+        padding: 10px 20px;
+    }
+
+    h1{
+        padding-bottom: 5px;
+    width: 200px;
+    font-size: 30px;
+    }
+
+    p{
+        font-size: 14px;
+    }
+
+    button{
+        margin: 30px 0px;
+    }
 }
